分支的注释

--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
     <!--git reset --soft HEAD^:撤销commit到上一个版本-->
     <!--git rm 文件名: 删除-->
     <!--ssh-keygen -t rsa -C "邮箱":密钥-->
+    <!--git branch 分支名:创建分支-->
+    <!--git branch: 查康当前分支-->
+    <!--git checkout 分支名:切换分支-->
+    <!--git checkout -b 分支名: 创建并分支-->
+    <!-- git merge 分支名:合并分支 -->
+    <!-- git branch -d 分支名:删除分支 -->
+    <!-- git log --graph:看分支视图-->
 </body>
 </html>
